More spacing tweaks on radio/check, fix radio dot color, remove disabled from stories

--- a/packages/css/src/form/checkbox/checkbox.css
+++ b/packages/css/src/form/checkbox/checkbox.css
@@ -1,6 +1,10 @@
 .hds-checkbox {
+  --checkmark-width: 16px;
+  --checkmark-margin: var(--hds-spacing-small-1);
+
   display: block;
-  padding: 0 0 0 calc(var(--hds-spacing-small-4) + 36px);
+  padding: 0 0 0
+    calc(var(--checkmark-width) + (var(--checkmark-margin) * 2) + var(--hds-spacing-small-3));
   border-radius: var(--hds-border-radius);
   font: var(--hds-typography-body-small);
   position: relative;
@@ -43,11 +47,11 @@
   * Create a custom checkbox
   */
   .hds-checkbox__checkmark {
-    margin: var(--hds-spacing-small-1);
+    margin: var(--checkmark-margin);
     position: absolute;
-    left: 16px;
-    height: 16px;
-    width: 16px;
+    left: 0;
+    height: var(--checkmark-width);
+    width: var(--checkmark-width);
     border: solid 2px var(--hds-colors-darker);
   }
 
@@ -73,8 +77,15 @@
   */
   &.hds-checkbox--bounding-box {
     background-color: var(--hds-colors-lighter);
-    padding: var(--hds-spacing-small-4) var(--hds-spacing-small-4) var(--hds-spacing-small-4)
-      calc(var(--hds-spacing-small-4) + 36px);
+    padding: var(--hds-spacing-small-4) var(--hds-spacing-medium-3) var(--hds-spacing-small-4)
+      calc(
+        var(--hds-spacing-small-4) + var(--checkmark-width) + (var(--checkmark-margin) * 2) +
+          var(--hds-spacing-small-3)
+      );
+
+    .hds-checkbox__checkmark {
+      left: var(--hds-spacing-small-4);
+    }
 
     &.hds-checkbox--error {
       border: solid 1px var(--hds-ui-colors-warning-yellow);
